Record use cases, design notes and roadmap in the plan
Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>